# svis-tool

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: analyzer.rs  lib.rs  parser.rs  vlq.rs
src/: main.rs
src/core/: analyzer.rs  mod.rs  output.rs  parser.rs  vlq.rs
src/output/: mod.rs  terminal.rs  utils.rs
src/ui/: terminal.rs  utils.rs
src/ui/tui/: core.rs  file_list.rs  mapping_info.rs  mod.rs  path_input.rs  widget_utils.rs
ui/: Cargo.toml
ui/src/: lib.rs  main.rs  terminal.rs  theme.rs  utils.rs
ui/src/tui/: core.rs  file_list.rs  mapping_info.rs  mod.rs  path_input.rs  widget_utils.rs
ui/src/tui/core/: custom_widget.rs  list.rs  mod.rs  tree.rs
ui/src/tui/widgets/: dialog.rs  file_list.rs  fps.rs  input.rs  mapping_info.rs  mod.rs  path_input.rs  search_dialog.rs
