[package]
name = "sourcemap-vis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.4"
console = "0.15.7"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"

[profile.release]
# lto = true
# strip = true
